added new api for enquiry add
